--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -12,6 +12,11 @@
     <select class="form-control" id="js-dateType" disabled="true"></select>
   </div>
 
+  <div class="form-group">
+    <label>Spatial coverage</label>
+    <div id="js-spatial-coverage-container"></div>
+  </div>
+
   <div class="form-group" data-error-container="startDate">
     <label class="control-label" for="js-startDate">Start</label>
     <input class="form-control" id="js-startDate" type="text" />
