Give more feedback about entered dates

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -10,21 +10,23 @@
   </div>
 
   <div class="form-group" data-error-container="dateType">
-    <label class="control-label" for="js-dateType">
-      Date type
-      &nbsp;(detect <input type="checkbox" checked="checked" />)
-    </label>
+    <label class="control-label" for="js-dateType">Date type</label>
+    <span>
+      &nbsp;(detect <input id="js-detect-dateType" type="checkbox" checked="checked" />)
+    </span>
     <select class="form-control" id="js-dateType" disabled="true"></select>
   </div>
 
   <div class="form-group" data-error-container="startDate">
     <label class="control-label" for="js-startDate">Start</label>
     <input class="form-control" id="js-startDate" type="text" />
+    <div class="well"></div>
   </div>
 
   <div class="form-group" data-error-container="endDate">
     <label class="control-label" for="js-endDate">End</label>
     <input class="form-control" id="js-endDate" type="text" />
+    <div class="well"></div>
   </div>
 
   <div>
