Update period form styles

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -1,4 +1,4 @@
-<form>
+<form class="period-form">
   <div class="form-group" data-error-container="label">
     <label class="control-label" for="js-label">Label</label>
     <input class="form-control" id="js-label" type="text" />
@@ -11,22 +11,30 @@
 
   <div class="form-group" data-error-container="dateType">
     <label class="control-label" for="js-dateType">Date type</label>
-    <span>
-      &nbsp;(detect <input id="js-detect-dateType" type="checkbox" checked="checked" />)
-    </span>
-    <select class="form-control" id="js-dateType" disabled="true"></select>
+    <div>
+      <select id="js-dateType" class="form-control" disabled="true"></select>
+      <span>
+        &nbsp;(Detect <input id="js-detect-dateType" type="checkbox" checked="checked" />)
+      </span>
+    </div>
   </div>
 
-  <div class="form-group" data-error-container="startDate">
-    <label class="control-label" for="js-startDate">Start</label>
-    <input class="form-control" id="js-startDate" type="text" />
-    <div class="well"></div>
-  </div>
+  <div class="period-dates form-group row">
+    <div class="date-input-container span" data-error-container="startDate">
+      <label class="control-label" for="js-startDate">Start</label>
+      <div>
+        <input class="form-control date-input" id="js-startDate" type="text" />
+        <div class="date-input-message"></div>
+      </div>
+    </div>
 
-  <div class="form-group" data-error-container="endDate">
-    <label class="control-label" for="js-endDate">End</label>
-    <input class="form-control" id="js-endDate" type="text" />
-    <div class="well"></div>
+    <div class="date-input-container span" data-error-container="endDate">
+      <label class="control-label" for="js-endDate">End</label>
+      <div>
+        <input class="form-control date-input" id="js-endDate" type="text" />
+        <div class="date-input-message"></div>
+      </div>
+    </div>
   </div>
 
   <div>
