Allow spatial coverage entries to be removed

--- a/style.less
+++ b/style.less
@@ -2,13 +2,18 @@
   width: 500px;
 
   input, select {
-    width: 330px;
+    width: 310px;
   }
 
   #js-dateType { display: inline-block !important; }
   #js-detect-dateType {
     position: relative; top: 2px;
     width: auto;
+  }
+
+  .spatial-coverage-list {
+    padding-left: 1em;
+    li { list-style-type: none };
   }
 
   .period-dates {
@@ -20,7 +25,7 @@
     vertical-align: top;
   }
   .date-input {
-    width: 160px;
+    width: 140px;
   }
   .date-input-message {
     height: 1.5em;
