--- a/src/templates/spatial_coverage.html
+++ b/src/templates/spatial_coverage.html
@@ -1,2 +1,2 @@
-<ul></ul>
-<input class="form-control" type="text">
+<ul class="spatial-coverage-list"></ul>
+<input class="form-control" type="text" placeholder="Begin typing to search">
