Add note field to period form

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -37,6 +37,11 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="control-label" for="js-note">Note</label>
+    <textarea class="form-control" id="js-note"></textarea>
+  </div>
+
   <div>
     <button type="button" class="btn btn-primary" id="js-save-period">Save</button>
   </div>
