--- a/style.less
+++ b/style.less
@@ -11,13 +11,21 @@
     width: auto;
   }
 
+  #js-note {
+    width: 420px;
+  }
+
+  #js-save-period {
+    margin-top: 1.5em;
+  }
+
   .spatial-coverage-list {
     padding-left: 1em;
     li { list-style-type: none };
   }
 
   .period-dates {
-    margin: 0 0 2em 0;
+    margin: 0 0 1em 0;
   }
   .date-input-container {
     display: inline-block;
