Prototype of a source input interface

--- a/src/templates/source_form.html
+++ b/src/templates/source_form.html
@@ -1,3 +1,21 @@
 <form>
- ok
+  <style type="text/css">
+textarea {
+  width: 100%;
+  height: 125px;
+}
+  </style>
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Source</h2>
+      <pre></pre>
+    </div>
+    <div class="col-md-6">
+      <p>
+      Paste text including a URL from a compatible site to add a source. Currently, compatible sites are worldcat.org and dx.doi.org.
+      </p>
+      <textarea></textarea>
+      <p class="message"></p>
+    </div>
+  </div>
 </form>
