Create outline for application- router, index, etc
Also start on view for creating a new periodization

--- a/src/templates/source_form.html
+++ b/src/templates/source_form.html
@@ -1,21 +1,13 @@
-<form>
-  <style type="text/css">
-textarea {
-  width: 100%;
-  height: 125px;
-}
-  </style>
-  <div class="row">
-    <div class="col-md-6">
-      <h2>Source</h2>
-      <pre></pre>
-    </div>
-    <div class="col-md-6">
-      <p>
-      Paste text including a URL from a compatible site to add a source. Currently, compatible sites are worldcat.org and dx.doi.org.
-      </p>
-      <textarea></textarea>
-      <p class="message"></p>
-    </div>
-  </div>
-</form>
+<div>
+  <p>
+  Periodizations are based on source material. Paste text in the block below that contains a URL from a site supported by PeriodO.
+  </p>
+  <textarea></textarea>
+  <p class="message"></p>
+  <p>Currently supported formats:</p>
+  <ul>
+    <li>URLs from the <a href="http://worldcat.org">WorldCat</a> catalog.</li>
+    <li>URLs from <a href="http://dx.doi.org">DOI lookup service</a>, searchable with <a href="http://crossref.org">CrossRef</a></li>
+    <li>A DOI in the format doi:xxx.yyy (as included in many citation styles)</li>
+  </ul>
+</div>
