Add list of periodizations on the index page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,8 @@
     <a href="#periodizations/add/" class="btn btn-primary">New periodization</a>
   </div>
   <div class="col-md-10">
-    <h2>Whatever is going to go here</h2>
+    <h2>Periodizations</h2>
+    <div id="periodization-list">
+    </div>
   </div>
 </div>
