Update source styling and use source template in multiple places
Also update some styles

--- a/src/templates/periodization_add.html
+++ b/src/templates/periodization_add.html
@@ -11,6 +11,15 @@
 <div>
   <div class="row">
     <div class="col-md-6" id="source-select"></div>
-    <div class="col-md-6" id="source-information"></div>
+    <div class="col-md-6">
+      <div id="source-information"></div>
+      <div id="source-confirm" class="hide">
+        <p>Is this the correct source?</p>
+        <div>
+          <button id="js-accept-source" class="btn btn-primary">Yes</button>
+          <button id="js-reject-source" class="btn btn-default">No</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
