--- a/src/templates/periodization_show.html
+++ b/src/templates/periodization_show.html
@@ -1,17 +1,12 @@
-<h1><%= periodization.source.title %></h1>
+<h1>Periodization</h1>
 
-<h2><%= periodization.source.yearPublished %></h2>
+<h2>Source</h2>
+<div id="source-information"></div>
 
-<h2>Creators</h2>
-<ul>
-  <% periodization.source.creators.forEach(function (creator) { %>
-  <li><%= creator.name %></li>
-  <% }) %>
-</ul>
-
-<h2>Contributors</h2>
-<ul>
-  <% periodization.source.contributors.forEach(function (contributor) { %>
-  <li><%= contributor.name %></li>
-  <% }) %>
-</ul>
+<h2>Periods</h2>
+<div>
+  <div>
+    <button id="js-add-period" class="btn btn-primary">Add period</button>
+  </div>
+  <div id="periods-list"></div>
+</div>
