--- a/style.less
+++ b/style.less
@@ -42,3 +42,17 @@
     font-size: 12px;
   }
 }
+
+dl.source {
+  > div { margin-bottom: 8px; }
+}
+
+#source-confirm {
+  text-align: center;
+  background-color: #fafafa;
+  margin: 0 20%;
+  padding: 12px 0;
+  box-shadow: #eee 2px 2px 2px;
+  border-radius: 2px;
+  border: 1px solid #999;
+}
