Update navbar style

--- a/style.less
+++ b/style.less
@@ -56,3 +56,16 @@ dl.source {
   border-radius: 2px;
   border: 1px solid #999;
 }
+
+#nav {
+  background: #eee;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+
+  .container { position: relative; }
+  #spinner {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+  }
+}
