Add button to delete database
Temporary while futzing a lot

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,10 @@
 <div class="row">
   <div class="col-md-2">
     <h2>Actions</h2>
-    <a href="#periodizations/add/" class="btn btn-primary">New periodization</a>
+    <ul class="actions-list">
+      <li><a href="#periodizations/add/" class="btn btn-primary">Add periodization</a></li>
+      <li><button id="js-delete-database" class="btn btn-danger">Delete database</button></li>
+    </ul>
   </div>
   <div class="col-md-10">
     <h2>Periodizations</h2>
