--- a/style.less
+++ b/style.less
@@ -69,3 +69,16 @@ dl.source {
     top: 50%;
   }
 }
+
+ul.actions-list {
+  margin: 0;
+  padding: 0;
+  li {
+    list-style-type: none;
+    margin-bottom: 8px;
+    > * {
+      width: 100%;
+      max-width: 200px;
+    }
+  }
+}
