Enable adding periods to periodizations

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -1,4 +1,4 @@
-<form class="period-form">
+<div class="period-form">
   <div class="form-group" data-error-container="label">
     <label class="control-label" for="js-label">Label</label>
     <input class="form-control" id="js-label" type="text" />
@@ -43,6 +43,8 @@
   </div>
 
   <div>
-    <button type="button" class="btn btn-primary" id="js-save-period">Save</button>
+    <button type="button" id="js-save-period" class="btn btn-primary">Save</button>
+    <button type="button" id="js-cancel-period" class="btn btn-default">Cancel</button>
   </div>
-</form>
+
+</div>
