--- a/src/templates/periodization_show.html
+++ b/src/templates/periodization_show.html
@@ -5,8 +5,9 @@
 
 <h2>Periods</h2>
 <div>
-  <div>
+  <div id="period-list"></div>
+  <div id="add-period-container">
     <button id="js-add-period" class="btn btn-primary">Add period</button>
   </div>
-  <div id="periods-list"></div>
+  <div id="period-add"></div>
 </div>
