--- a/style.less
+++ b/style.less
@@ -15,8 +15,8 @@
     width: 420px;
   }
 
-  #js-save-period {
-    margin-top: 1.5em;
+  #js-save-period, #js-cancel-period {
+    margin: 1.5em 0 2.5em;
   }
 
   .spatial-coverage-list {
@@ -55,6 +55,10 @@ dl.source {
   box-shadow: #eee 2px 2px 2px;
   border-radius: 2px;
   border: 1px solid #999;
+}
+
+.twitter-typeahead .tt-hint[disabled] {
+  background: none;
 }
 
 #nav {
