Add loading icon to source LD fetcher

--- a/src/templates/source_form.html
+++ b/src/templates/source_form.html
@@ -3,7 +3,10 @@
   Periodizations are based on source material. Paste text in the block below that contains a URL from a site supported by PeriodO.
   </p>
   <textarea></textarea>
-  <p class="message"></p>
+  <div class="message" style="position: relative;">
+    <span id="source-loading"></span>
+    <span id="message-text"></span>
+  </div>
   <p>Currently supported formats:</p>
   <ul>
     <li>URLs from the <a href="http://worldcat.org">WorldCat</a> catalog.</li>
