Add view for syncing data from server

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <h2>Actions</h2>
     <ul class="actions-list">
       <li><a href="#periodizations/add/" class="btn btn-primary">Add periodization</a></li>
+      <li><a href="#sync/" class="btn btn-primary">Sync with server</a></li>
       <li><button id="js-delete-database" class="btn btn-danger">Delete database</button></li>
     </ul>
   </div>
