Use temporary periodo server at http://ptgolden.org

--- a/src/templates/sync.html
+++ b/src/templates/sync.html
@@ -2,7 +2,7 @@
 
 <div>
   <label for="js-sync-root">URL</label>
-  <input type="text" name="js-sync-root" id="js-sync-root" value="http://perio.do/" />
+  <input type="text" name="js-sync-root" id="js-sync-root" value="http://ptgolden.org/periodo_server/" />
   <button type="button" class="btn btn-default" id="js-fetch-data">Fetch</button>
   <span id="js-sync-loading" style="position: relative;"></span>
 </div>
