--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -4,12 +4,18 @@
     <input class="form-control" id="js-label" type="text" />
   </div>
 
+  <hr />
+
   <div class="form-group">
     <label>Spatial coverage</label>
     <div id="js-spatial-coverage-container"></div>
   </div>
 
-  <div class="form-group" data-error-container="dateType">
+  <hr />
+
+  <div data-error-container="dates"></div>
+
+  <div class="form-group">
     <label class="control-label" for="js-dateType">Date type</label>
     <div>
       <select id="js-dateType" class="form-control" disabled="true"></select>
@@ -20,7 +26,8 @@
   </div>
 
   <div class="period-dates form-group row">
-    <div class="date-input-container span" data-error-container="startDate">
+
+    <div class="date-input-container span">
       <label class="control-label" for="js-startDate">Start</label>
       <div>
         <input class="form-control date-input" id="js-startDate" type="text" />
@@ -28,7 +35,7 @@
       </div>
     </div>
 
-    <div class="date-input-container span" data-error-container="endDate">
+    <div class="date-input-container span">
       <label class="control-label" for="js-endDate">End</label>
       <div>
         <input class="form-control date-input" id="js-endDate" type="text" />
@@ -36,6 +43,8 @@
       </div>
     </div>
   </div>
+
+  <hr />
 
   <div class="form-group">
     <label class="control-label" for="js-note">Note</label>
