Support deleting periods from period collections

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -54,6 +54,7 @@
   <div>
     <button type="button" id="js-save-period" class="btn btn-primary">Save</button>
     <button type="button" id="js-cancel-period" class="btn btn-default">Cancel</button>
+    <button type="button" id="js-delete-period" class="btn btn-danger pull-right">Delete</button>
   </div>
 
 </div>
