Update styles for period form

--- a/style.less
+++ b/style.less
@@ -1,5 +1,9 @@
 .period-form {
-  width: 500px;
+  width: 540px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  margin-bottom: 2em;
 
   input, select {
     width: 310px;
@@ -15,8 +19,13 @@
     width: 420px;
   }
 
-  #js-save-period, #js-cancel-period {
-    margin: 1.5em 0 2.5em;
+  #js-save-period, #js-cancel-period, #js-delete-period {
+    margin-top: 1.5em;
+  }
+
+  #js-note {
+    width: 100%;
+    height: 6em;
   }
 
   .spatial-coverage-list {
