Basic patch admin interface

--- a/style.less
+++ b/style.less
@@ -104,3 +104,21 @@ ul.actions-list {
     &:focus .btn, &:hover .btn { display: inline-block; }
   }
 }
+
+#patch-list {
+  .patch {
+    border: 1px solid #ccc;
+    padding: 1em;
+    margin-bottom: 1em;
+
+    &:hover {
+      cursor: pointer;
+      background: #f0f0f0;
+    }
+
+    &.patch-selected {
+      background: #f0f0f0;
+    }
+  }
+
+}
