--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -1,6 +1,2 @@
-<h1>Admin</h1>
-
-<div class="row">
-  <div id="patch-detail" class="col-md-6"></div>
-  <div id="patch-list" class="col-md-6"></div>
-</div>
+<h2><a href="#admin/submit/">Create & submit patch</a></h2>
+<h2><a href="#admin/apply/">Apply patch</a></h2>
