Don't show blank URL field for source if URL does not exist

--- a/src/templates/source.html
+++ b/src/templates/source.html
@@ -4,11 +4,13 @@
     <dd><%= source.title %></dd>
   </div>
 
+    <% var url = source.id || (source.partOf && source.partOf.id) || (source.url && [].concat(source.url)[0]) %>
+    <% if (url) { %>
   <div>
     <dt>URL</dt>
-    <% var url = source.id || (source.partOf && source.partOf.id) || (source.url && [].concat(source.url)[0]) %>
     <dd><a href="<%= url %>"><%= url %></a></dd>
   </div>
+  <% } %>
 
   <div>
     <dt>Year published</dt>
