Initial visualization implementation
Limited solely to individual periods for the moment

--- a/src/templates/periodization_show.html
+++ b/src/templates/periodization_show.html
@@ -28,6 +28,7 @@ var sourceInformation = require('./source.html');
       <li class="active"><a href="#" data-type="list">List</a></li>
       <li><a href="#" data-type="jsonld">JSON-LD</a></li>
       <li><a href="#" data-type="ttl">RDF/Turtle</a></li>
+      <li><a href="#" data-type="viz">Visualization</a></li>
     </ul>
   </div>
   <div id="period-list">
