--- a/style.less
+++ b/style.less
@@ -127,3 +127,12 @@ ul.actions-list {
   }
 
 }
+
+svg .period text {
+  opacity: 0;
+}
+
+svg .period.hovering {
+  rect { filter: url('#hover-filter'); }
+  text { opacity: 1 }
+}
