Fix SVG filters in firefox

--- a/style.less
+++ b/style.less
@@ -132,8 +132,8 @@ svg .period text {
   opacity: 0;
 }
 
-svg .period.hovering {
-  rect { filter: url('#hover-filter'); }
+svg .period:hover {
+  //rect { filter: url(#hover-filter); }
   text { opacity: 1 }
 }
 
