Start adapting period form to handle ranges & expanded parser
Especially, don't worry so much about the date types parsed

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -15,19 +15,9 @@
 
   <div data-error-container="dates"></div>
 
-  <div class="form-group">
-    <label class="control-label" for="js-dateType">Date type</label>
-    <div>
-      <select id="js-dateType" class="form-control" disabled="true"></select>
-      <span>
-        &nbsp;(Detect <input id="js-detect-dateType" type="checkbox" checked="checked" />)
-      </span>
-    </div>
-  </div>
-
   <div class="period-dates form-group row">
 
-    <div class="date-input-container span">
+    <div class="date-input-container">
       <label class="control-label" for="js-startDate">Start</label>
       <div>
         <input class="form-control date-input" id="js-startDate" type="text" />
@@ -35,8 +25,8 @@
       </div>
     </div>
 
-    <div class="date-input-container span">
-      <label class="control-label" for="js-endDate">End</label>
+    <div class="date-input-container">
+      <label class="control-label" for="js-endDate">Stop</label>
       <div>
         <input class="form-control date-input" id="js-endDate" type="text" />
         <div class="date-input-message"></div>
