--- a/style.less
+++ b/style.less
@@ -36,13 +36,15 @@
   .period-dates {
     margin: 0 0 1em 0;
   }
+  /*
   .date-input-container {
     display: inline-block;
     width: 240px;
     vertical-align: top;
   }
+  */
   .date-input {
-    width: 140px;
+    width: 250px;
   }
   .date-input-message {
     height: 1.5em;
