Change "periodizations" to "period collections"

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,13 +3,13 @@
   <div class="col-md-2">
     <h2>Actions</h2>
     <ul class="actions-list">
-      <li><a href="#periodizations/add/" class="btn btn-primary">Add periodization</a></li>
+      <li><a href="#periodCollections/add/" class="btn btn-primary">Add period collection</a></li>
       <li><a href="#sync/" class="btn btn-primary">Sync with server</a></li>
       <li><button id="js-delete-database" class="btn btn-danger">Delete database</button></li>
     </ul>
   </div>
   <div class="col-md-10">
-    <h2>Periodizations</h2>
+    <h2>Period collections</h2>
     <div id="periodization-list">
     </div>
   </div>
