--- a/src/templates/source_form.html
+++ b/src/templates/source_form.html
@@ -1,6 +1,6 @@
 <div>
   <p>
-  Periodizations are based on source material. Paste text in the block below that contains a URL from a site supported by PeriodO.
+  Period collections are based on source material. Paste text in the block below that contains a URL from a site supported by PeriodO.
   </p>
   <textarea></textarea>
   <div class="message" style="position: relative;">
