--- a/src/templates/period_collection_add.html
+++ b/src/templates/period_collection_add.html
@@ -7,7 +7,7 @@
 }
 </style>
 </style>
-<h1>Add periodization</h1>
+<h1>Add period collection</h1>
 <div>
   <div class="row">
     <div class="col-md-6" id="source-select"></div>
