Add link for signing in

--- a/style.less
+++ b/style.less
@@ -77,11 +77,11 @@ dl.source {
   border-bottom: 1px solid #ccc;
   border-radius: 0;
 
-  .container { position: relative; }
+  //.container { position: relative; }
   #spinner {
-    position: absolute;
-    right: 20px;
-    top: 50%;
+    //position: absolute;
+    //right: 20px;
+    //top: 50%;
   }
 }
 
