Support for adding non-linked data sources

--- a/src/templates/period_collection_add.html
+++ b/src/templates/period_collection_add.html
@@ -1,25 +1,8 @@
-<style type="text/css">
-#source-select textarea {
-  width: 100%;
-  height: 100px;
-  box-sizing: border-box;
-  padding: 6px 8px;
-}
-</style>
-</style>
 <h1>Add period collection</h1>
+<p>
+Period collections are based on source material.
+</p>
 <div>
-  <div class="row">
-    <div class="col-md-6" id="source-select"></div>
-    <div class="col-md-6">
-      <div id="source-information"></div>
-      <div id="source-confirm" class="hide">
-        <p>Is this the correct source?</p>
-        <div>
-          <button id="js-accept-source" class="btn btn-primary">Yes</button>
-          <button id="js-reject-source" class="btn btn-default">No</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="row" id="ld-source-select"></div>
+  <div class="row hide" id="no-ld-source-select"></div>
 </div>
