--- a/style.less
+++ b/style.less
@@ -131,6 +131,7 @@ ul.actions-list {
 
 }
 
+// Timelines
 svg .period text {
   opacity: 0;
 }
@@ -145,6 +146,14 @@ svg .period:hover {
   -moz-user-select: none;
   -webkit-user-select: none;
 }
+
+
+// Source add form
+#non-ld-source-toggle {
+  padding-top: 60px;
+  text-align: center;
+}
+
 
 // ORCID
 #auth-menu li a { display: inline-block }
