Allow editing "spatial coverage description" in period form

--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -7,7 +7,12 @@
   <hr />
 
   <div class="form-group">
-    <label>Spatial coverage</label>
+    <label>Spatial coverage description</label>
+    <input class="form-control" id="js-spatialCoverageLabel" type="text" />
+  </div>
+
+  <div class="form-group">
+    <label>Spatial coverage extent</label>
     <div id="js-spatial-coverage-container"></div>
   </div>
 
