--- a/src/templates/period_form.html
+++ b/src/templates/period_form.html
@@ -42,8 +42,15 @@
   <hr />
 
   <div class="form-group">
-    <label class="control-label" for="js-note">Note</label>
+    <label class="control-label" for="js-note">PeriodO note</label>
+    <p class="small">Extra information from import process</p>
     <textarea class="form-control" id="js-note"></textarea>
+  </div>
+
+  <div class="form-group">
+    <label class="control-label" for="js-source-note">Source note</label>
+    <p class="small">Notes included within the source</p>
+    <textarea class="form-control" id="js-source-note"></textarea>
   </div>
 
   <div>
